@@ -33,8 +33,18 @@
 #	define W_OK 2
 #	define R_OK 4
 #	include <direct.h>
+#	define open _open
 #	define mkdir _mkdir
+#	define read _read
 #	define rmdir _rmdir
+#	define ssize_t int
+#	define fstat _fstat
+#	define S_IRWXU (S_IREAD | S_IWRITE | S_IEXEC)
+#	define S_IRWXG 0
+#	define S_IRWXO 0
+#	define write _write
+#	define stat _stat
+#	define unlink _unlink
 #else
 #	include <unistd.h>
 #endif
@@ -42,15 +52,22 @@
 // for BOOLEAN
 #include "compiler.h"
 
+// from temp.h
 void initTempDir (void);
 void unInitTempDir (void);
 char *tempFilePath (const char *filename);
+
+
+// from dirs.h
 int mkdirhier (const char *path);
 const char *getHomeDir (void);
 int createDirectory (const char *dir, int mode);
 int expandPath (char *dest, size_t len, const char *src);
+
+// from files.h
+int copyFile (const char *srcName, const char *newName);
 BOOLEAN fileExists (const char *name);
-int getUserDataDir (char *dir, size_t len);
+
 
 #endif  /* _FILE_H */
 
