@@ -1,1 +1,1 @@
-uqm_CFILES="dirs.c temp.c"
+uqm_CFILES="dirs.c files.c temp.c"
